packages/java/src/main/resources/natives/macos-arm64/include/spikard.h

typedef uint64_t SPIKARDAlefHandle;
SPIKARDAlefHandle spikard_api_key_auth_config_from_json(const char *json);
void spikard_api_key_auth_config_free(SPIKARDAlefHandle handle);
SPIKARDAlefHandle spikard_authorization_config_from_json(const char *json);
void spikard_authorization_config_free(SPIKARDAlefHandle handle);
SPIKARDAlefHandle spikard_compression_config_from_json(const char *json);
void spikard_compression_config_free(SPIKARDAlefHandle handle);
SPIKARDAlefHandle spikard_cors_config_from_json(const char *json);
char *spikard_cors_config_to_json(SPIKARDAlefHandle handle);
void spikard_cors_config_free(SPIKARDAlefHandle handle);
char *spikard_cors_config_allowed_methods_joined(SPIKARDAlefHandle this_);
char *spikard_cors_config_allowed_headers_joined(SPIKARDAlefHandle this_);
char *spikard_full_schema_config_to_json(SPIKARDAlefHandle handle);
void spikard_full_schema_config_free(SPIKARDAlefHandle handle);
void spikard_graph_ql_route_config_free(SPIKARDAlefHandle handle);
SPIKARDAlefHandle spikard_graph_ql_route_config_new(void);
SPIKARDAlefHandle spikard_graph_ql_route_config_path(SPIKARDAlefHandle this_,
                                                     const char *path);
SPIKARDAlefHandle spikard_graph_ql_route_config_method(SPIKARDAlefHandle this_,
                                                       const char *method);
SPIKARDAlefHandle
spikard_graph_ql_route_config_enable_playground(SPIKARDAlefHandle this_,
                                                int32_t enable);
SPIKARDAlefHandle
spikard_graph_ql_route_config_description(SPIKARDAlefHandle this_,
                                          const char *description);
char *spikard_graph_ql_route_config_get_path(SPIKARDAlefHandle this_);
char *spikard_graph_ql_route_config_get_method(SPIKARDAlefHandle this_);
int32_t
spikard_graph_ql_route_config_is_playground_enabled(SPIKARDAlefHandle this_);
char *spikard_graph_ql_route_config_get_description(SPIKARDAlefHandle this_);
void spikard_handler_result_free(SPIKARDAlefHandle handle);
SPIKARDAlefHandle spikard_json_rpc_method_info_from_json(const char *json);
void spikard_json_rpc_method_info_free(SPIKARDAlefHandle handle);
SPIKARDAlefHandle spikard_jwt_auth_config_from_json(const char *json);
void spikard_jwt_auth_config_free(SPIKARDAlefHandle handle);
SPIKARDAlefHandle spikard_lifecycle_hooks_config_from_json(const char *json);
void spikard_lifecycle_hooks_config_free(SPIKARDAlefHandle handle);
SPIKARDAlefHandle spikard_problem_details_from_json(const char *json);
void spikard_problem_details_free(SPIKARDAlefHandle handle);
char *spikard_problem_details_to_json(SPIKARDAlefHandle this_);
char *spikard_query_mutation_config_to_json(SPIKARDAlefHandle handle);
void spikard_query_mutation_config_free(SPIKARDAlefHandle handle);
char *spikard_query_only_config_to_json(SPIKARDAlefHandle handle);
void spikard_query_only_config_free(SPIKARDAlefHandle handle);
SPIKARDAlefHandle spikard_rate_limit_config_from_json(const char *json);
void spikard_rate_limit_config_free(SPIKARDAlefHandle handle);
void spikard_request_data_free(SPIKARDAlefHandle handle);
SPIKARDAlefHandle spikard_response_from_json(const char *json);
char *spikard_response_to_json(SPIKARDAlefHandle handle);
void spikard_response_free(SPIKARDAlefHandle handle);
void spikard_route_builder_free(SPIKARDAlefHandle handle);
SPIKARDAlefHandle spikard_sse_event_from_json(const char *json);
char *spikard_sse_event_to_json(SPIKARDAlefHandle handle);
void spikard_sse_event_free(SPIKARDAlefHandle handle);
SPIKARDAlefHandle spikard_upload_file_from_json(const char *json);
char *spikard_upload_file_to_json(SPIKARDAlefHandle handle);
void spikard_upload_file_free(SPIKARDAlefHandle handle);
int32_t spikard_upload_file_as_bytes(SPIKARDAlefHandle this_, uint8_t **out_ptr,
                                     uintptr_t *out_len, uintptr_t *out_cap);
char *spikard_upload_file_read_to_string(SPIKARDAlefHandle this_);
char *spikard_upload_file_content_type_or_default(SPIKARDAlefHandle this_);
SPIKARDAlefHandle spikard_schema_full(void);
SPIKARDAlefHandle spikard_schema_query_mutation(void);
SPIKARDAlefHandle spikard_schema_query_only(void);
int32_t spikard_app_register_route(SPIKARDAlefHandle owner,
                                   char *(*callback)(void *, const char *),
                                   void (*response_free)(char *), void *context,
                                   SPIKARDAlefHandle builder);
int32_t spikard_app_get(SPIKARDAlefHandle owner,
                        char *(*callback)(void *, const char *),
                        void (*response_free)(char *), void *context,
                        const char *path);
int32_t spikard_app_post(SPIKARDAlefHandle owner,
                         char *(*callback)(void *, const char *),
                         void (*response_free)(char *), void *context,
                         const char *path);
int32_t spikard_app_put(SPIKARDAlefHandle owner,
                        char *(*callback)(void *, const char *),
                        void (*response_free)(char *), void *context,
                        const char *path);
int32_t spikard_app_patch(SPIKARDAlefHandle owner,
                          char *(*callback)(void *, const char *),
                          void (*response_free)(char *), void *context,
                          const char *path);
int32_t spikard_app_delete(SPIKARDAlefHandle owner,
                           char *(*callback)(void *, const char *),
                           void (*response_free)(char *), void *context,
                           const char *path);
int32_t spikard_app_head(SPIKARDAlefHandle owner,
                         char *(*callback)(void *, const char *),
                         void (*response_free)(char *), void *context,
                         const char *path);
int32_t spikard_app_options(SPIKARDAlefHandle owner,
                            char *(*callback)(void *, const char *),
                            void (*response_free)(char *), void *context,
                            const char *path);
int32_t spikard_app_connect(SPIKARDAlefHandle owner,
                            char *(*callback)(void *, const char *),
                            void (*response_free)(char *), void *context,
                            const char *path);
int32_t spikard_app_trace(SPIKARDAlefHandle owner,
                          char *(*callback)(void *, const char *),
                          void (*response_free)(char *), void *context,
                          const char *path);