packages/csharp/src/Spikard/NativeMethods.cs

// This file is auto-generated by alef. DO NOT EDIT.
// alef:hash:28690c39ca668480e907ce5aa7225385429fdc264ac50689dc1619d8ab7c5876
#nullable enable

using System;
using System.Runtime.InteropServices;

namespace Spikard;

internal static partial class NativeMethods
{
    private const string LibName = "spikard_ffi";

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_graph_ql_route_config_free")]
    internal static extern void GraphQLRouteConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_handler_result_free")]
    internal static extern void HandlerResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_request_data_free")]
    internal static extern void RequestDataFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_route_builder_free")]
    internal static extern void RouteBuilderFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_api_key_auth_config_from_json")]
    internal static extern IntPtr ApiKeyAuthConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_api_key_auth_config_free")]
    internal static extern void ApiKeyAuthConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_authorization_config_from_json")]
    internal static extern IntPtr AuthorizationConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_authorization_config_free")]
    internal static extern void AuthorizationConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_compression_config_from_json")]
    internal static extern IntPtr CompressionConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_compression_config_free")]
    internal static extern void CompressionConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_cors_config_from_json")]
    internal static extern IntPtr CorsConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_cors_config_free")]
    internal static extern void CorsConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_json_rpc_method_info_from_json")]
    internal static extern IntPtr JsonRpcMethodInfoFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_json_rpc_method_info_free")]
    internal static extern void JsonRpcMethodInfoFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_jwt_auth_config_from_json")]
    internal static extern IntPtr JwtAuthConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_jwt_auth_config_free")]
    internal static extern void JwtAuthConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_lifecycle_hooks_config_from_json")]
    internal static extern IntPtr LifecycleHooksConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_lifecycle_hooks_config_free")]
    internal static extern void LifecycleHooksConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_problem_details_from_json")]
    internal static extern IntPtr ProblemDetailsFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_problem_details_free")]
    internal static extern void ProblemDetailsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_rate_limit_config_from_json")]
    internal static extern IntPtr RateLimitConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_rate_limit_config_free")]
    internal static extern void RateLimitConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_response_from_json")]
    internal static extern IntPtr ResponseFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_response_free")]
    internal static extern void ResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_sse_event_from_json")]
    internal static extern IntPtr SseEventFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_sse_event_free")]
    internal static extern void SseEventFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_upload_file_from_json")]
    internal static extern IntPtr UploadFileFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_upload_file_free")]
    internal static extern void UploadFileFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_cors_config_to_json")]
    internal static extern IntPtr CorsConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_full_schema_config_to_json")]
    internal static extern IntPtr FullSchemaConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_full_schema_config_free")]
    internal static extern void FullSchemaConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_problem_details_to_json")]
    internal static extern IntPtr ProblemDetailsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_query_mutation_config_to_json")]
    internal static extern IntPtr QueryMutationConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_query_mutation_config_free")]
    internal static extern void QueryMutationConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_query_only_config_to_json")]
    internal static extern IntPtr QueryOnlyConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_query_only_config_free")]
    internal static extern void QueryOnlyConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_response_to_json")]
    internal static extern IntPtr ResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_sse_event_to_json")]
    internal static extern IntPtr SseEventToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_upload_file_to_json")]
    internal static extern IntPtr UploadFileToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_schema_query_only")]
    internal static extern IntPtr SchemaQueryOnly();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_schema_query_mutation")]
    internal static extern IntPtr SchemaQueryMutation();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_schema_full")]
    internal static extern IntPtr SchemaFull();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_upload_file_as_bytes")]
    internal static extern IntPtr UploadFileAsBytes(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_upload_file_read_to_string")]
    internal static extern IntPtr UploadFileReadToString(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_upload_file_content_type_or_default")]
    internal static extern IntPtr UploadFileContentTypeOrDefault(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_graph_ql_route_config_new")]
    internal static extern IntPtr GraphQLRouteConfigNew();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_graph_ql_route_config_path")]
    internal static extern IntPtr GraphQLRouteConfigPath(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_graph_ql_route_config_method")]
    internal static extern IntPtr GraphQLRouteConfigMethod(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string method
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_graph_ql_route_config_enable_playground")]
    internal static extern IntPtr GraphQLRouteConfigEnablePlayground(
        IntPtr handle,
        [MarshalAs(UnmanagedType.U1)] bool enable
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_graph_ql_route_config_description")]
    internal static extern IntPtr GraphQLRouteConfigDescription(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string description
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_graph_ql_route_config_get_path")]
    internal static extern IntPtr GraphQLRouteConfigGetPath(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_graph_ql_route_config_get_method")]
    internal static extern IntPtr GraphQLRouteConfigGetMethod(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_graph_ql_route_config_is_playground_enabled")]
    internal static extern int GraphQLRouteConfigIsPlaygroundEnabled(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_graph_ql_route_config_get_description")]
    internal static extern IntPtr GraphQLRouteConfigGetDescription(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_cors_config_allowed_methods_joined")]
    internal static extern IntPtr CorsConfigAllowedMethodsJoined(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "spikard_cors_config_allowed_headers_joined")]
    internal static extern IntPtr CorsConfigAllowedHeadersJoined(
        IntPtr handle
    );
